[gd_scene load_steps=3 format=3 uid="uid://7i1fhibpl60e"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]
[ext_resource type="Theme" path="res://themes/KeyboardDefenseTheme.tres" id="2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.035, 0.06, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuPanel" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/MenuPanel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TitleLabel" type="Label" parent="Center/MenuPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.98, 0.84, 0.44, 1)
theme_override_font_sizes/font_size = 36
text = "Keyboard Defense"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="Center/MenuPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.7, 0.82, 1)
theme_override_font_sizes/font_size = 16
text = "A fantasy kingdom typing academy"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Center/MenuPanel/VBox"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="StartButton" type="Button" parent="Center/MenuPanel/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Start Campaign"

[node name="KingdomButton" type="Button" parent="Center/MenuPanel/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Kingdom Management"

[node name="SettingsButton" type="Button" parent="Center/MenuPanel/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="Center/MenuPanel/VBox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -12.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 0.6)
theme_override_font_sizes/font_size = 12
text = "v0.1.0"
horizontal_alignment = 2
